# py-teleco-daisy

./: LICENSE  README.md  discover.py  pyproject.toml  ruff.toml  teleco_daisy.py
.github/workflows/: publish.yml
teleco_daisy/: __init__.py
